--- a/ui/zones/zone_liste_conv.kv
+++ b/ui/zones/zone_liste_conv.kv
@@ -1,4 +1,6 @@
 #:import dp kivy.metrics.dp
+#:import config_ui ui.config_ui
+
 
 <SelectableItem>:
     size_hint_y: None
@@ -9,7 +11,7 @@
     color: (1,1,1,1)
     canvas.before:
         Color:
-            rgba: (0.25, 0.5, 0.9, 1) if self.selected else (0.3, 0.3, 0.3, 1) if self.hovered else (0.16, 0.16, 0.16, 1)
+            rgba: config_ui.COLOR_USER_BUBBLE if self.selected else (0, 0, 0, 0)
         Rectangle:
             size: self.size
             pos: self.pos
