--- a/ui/zones/zone_liste_conv.kv
+++ b/ui/zones/zone_liste_conv.kv
@@ -1,42 +1,45 @@
-#:import dp kivy.metrics.dp
 #:import config_ui ui.config_ui
 
-
 <SelectableItem>:
-    size_hint_y: None
-    height: dp(36)
-    halign: 'left'
-    text_size: self.size
-    padding: dp(12), 0
-    color: (1,1,1,1)
+    selected: False
     canvas.before:
         Color:
-            rgba: config_ui.COLOR_USER_BUBBLE if self.selected else (0, 0, 0, 0)
+            rgba: config_ui.COLOR_USER_BUBBLE if self.selected else config_ui.COLOR_USER_BUBBLE_LIGHT if self.hovered else (0, 0, 0, 0)
         Rectangle:
-            size: self.size
             pos: self.pos
+            size: self.size
+
+    halign: "left"
+    text_size: self.size
+    color: (1, 1, 1, 1) if self.hovered or self.selected else (1, 1, 1, 0.7)
+    bold: self.selected
+    padding: [10, 5]
+    font_size: config_ui.FONT_SIZE_CONV_LIST
+
 
 <ZoneListeConv>:
-    orientation: 'vertical'
-    spacing: dp(6)
-    padding: dp(6)
-    BoxLayout:
+    orientation: "vertical"
+
+    Label:
+        text: "Conversations"
         size_hint_y: None
-        height: dp(32)
-        Label:
-            text: "Conversations"
-            bold: True
-            halign: 'left'
-            valign: 'middle'
-            text_size: self.size
+        height: dp(30)
+        halign: "left"
+        valign: "middle"
+        text_size: self.size
+        color: (1, 1, 1, 1)
+        bold: True
+        font_size: "15sp"
+
     RecycleView:
         id: rv
-        viewclass: 'SelectableItem'
+        viewclass: "SelectableItem"
         scroll_type: ['bars', 'content']
-        bar_width: dp(6)
+        bar_width: dp(8)
+
         RecycleBoxLayout:
-            default_size: None, dp(36)
-            default_size_hint: 1, None
-            size_hint_y: None
-            height: self.minimum_height
             orientation: 'vertical'
+            size_hint_y: None
+            default_size: None, dp(32)
+            default_size_hint: 1, None
+            height: self.minimum_height
