refacto des boutons ok

--- a/ui/zones/zone_message.kv
+++ b/ui/zones/zone_message.kv
@@ -1,9 +1,5 @@
 #:import config_ui ui.config_ui
-
-
-<ImageButton@ButtonBehavior+Image>:
-    allow_stretch: True
-    keep_ratio: True
+#:import SendButton ui.widgets.buttons.SendButton
 
 <SubmitTextInput>:
     cursor_color: config_ui.COLOR_CURSOR
@@ -62,12 +58,20 @@
                     size_hint_x: 1
                     on_text: root._on_text(self.text)
 
-            # --- Bouton envoyer ---
-            ImageButton:
-                id: send_btn
-                source: 'assets/images/send_icon.png'
+            # --- Bouton envoyer centralisé (pur icône) ---
+            SendButton:
+                id: btn_send
                 size_hint: None, None
                 size: dp(35), dp(35)
-                opacity: 1 if not root.busy else 0
-                disabled: root.busy or not root.can_send
+                background_normal: ""
+                background_down: ""
+                background_color: 0, 0, 0, 0
+                border: 0, 0, 0, 0
                 on_release: root.submit()
+
+                Image:
+                    source: "assets/images/send_icon.png"
+                    allow_stretch: True
+                    keep_ratio: True
+                    center: self.parent.center
+                    size: self.parent.size
